docs(dev): develop
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>
Co-authored-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html
-	lang="{% if page.direction %}{{ page.direction }}{% else %}{{ site.direction | default: 'en-US' }}{% endif %}"
+	lang="{% if page.language %}{{ page.language }}{% else %}{{ site.language | default: 'en-US' }}{% endif %}"
 >
 	{% include head.html %}
 
