--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -1,10 +1,9 @@
 ---
 layout: default
 ---
-<div class="md-content"> 
-    <article class="md-content__inner md-typeset">
-    {{ content }}
-    {% include toc.html %}
-    {% include editable.html %}
-    </article>
-</div>      
+
+<div class="md-content">
+	<article class="md-content__inner md-typeset">
+		{{ content }} {% include toc.html %} {% include editable.html %}
+	</article>
+</div>
