docs(dev): develop
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>
Co-authored-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,7 +15,7 @@
 		<div class="md-container">
 			<main class="md-main">
 				<div class="md-main__inner md-grid" data-md-component="container">
-					{% include sidebar.html %}
+					<!-- {% include sidebar.html %} -->
 					<div id="md-container-pancakes">{{ content }}</div>
 				</div>
 			</main>
