--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -61,6 +61,7 @@
 										title="{{ section.title }}"
 										>{{ section.title }}</a
 									>
+									<!-- {% if item.url == page.url %}active{% endif %} -->
 								</li>
 								{% endfor %}
 							</ul>
