--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -52,7 +52,7 @@
 							<label class="md-nav__title" for="__toc">Table of contents</label>
 							<ul class="md-nav__list" data-md-scrollfix="">
 								{% for section in site.data.toc %}
-								<!-- site.data[page.sidebar] -->
+								<!-- {{site.data[page.sidebar]}} -->
 								<li class="md-nav__item">
 									<a
 										class="md-nav__link"
@@ -70,7 +70,7 @@
 
 					<!-- This navigation is completely for mobile -->
 					{% for section in site.data.toc %}
-					<!-- site.data[page.sidebar] -->
+					<!-- {{site.data[page.sidebar]}} -->
 					<li class="md-nav__item mobile-nav" style="display: none">
 						<a
 							class="md-nav__link"
@@ -83,7 +83,7 @@
 
 					<!-- This navigation is completely for non mobile -->
 					{% for section in site.data.toc %}
-					<!-- site.data[page.sidebar] -->
+					<!-- {{site.data[page.sidebar]}} -->
 					<li class="md-nav__item md-nav__item--nested not-mobile-nav">
 						<a
 							class="md-nav__link pancakes-parent"
