--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -50,9 +50,26 @@
 
 						<nav class="md-nav md-nav--secondary">
 							<label class="md-nav__title" for="__toc">Table of contents</label>
+							<!-- {% for section in site.data[page.sidebar] %}
+
+
+
+								{% if section.children %}
+
+								{% for child in section.children %}
+
+								{% if section.url == child.url %}active{% endif %}
+
+								{% endfor %}{% endif %}
+
+								title = {{ section.title }}
+
+								url = {% if section.external_url %}{{ section.external_url }}{% else %}{{ section.url }}{% endif %}
+
+								{% endfor %}
+								-->
 							<ul class="md-nav__list" data-md-scrollfix="">
 								{% for section in site.data.toc %}
-								<!-- {{site.data[page.sidebar]}} -->
 								<li class="md-nav__item">
 									<a
 										class="md-nav__link"
