--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -50,26 +50,27 @@
 
 						<nav class="md-nav md-nav--secondary">
 							<label class="md-nav__title" for="__toc">Table of contents</label>
-							<!-- {% for section in site.data[page.sidebar] %}
+							<!--
+								{% for section in site.data[page.sidebar] %}
 
+									{% if section.children %}
 
+										{% for child in section.children %}
 
-								{% if section.children %}
+											{% if section.url == child.url %}active{% endif %}
 
-								{% for child in section.children %}
+										{% endfor %}
 
-								{% if section.url == child.url %}active{% endif %}
+									{% endif %}
 
-								{% endfor %}{% endif %}
+									title = {{ section.title }}
 
-								title = {{ section.title }}
-
-								url = {% if section.external_url %}{{ section.external_url }}{% else %}{{ section.url }}{% endif %}
+									url = {% if section.external_url %}{{ section.external_url }}{% else %}{{ section.url }}{% endif %}
 
 								{% endfor %}
 								-->
 							<ul class="md-nav__list" data-md-scrollfix="">
-								{% for section in site.data.toc %}
+								{% for section in site.data.sidebarMethod %}
 								<li class="md-nav__item">
 									<a
 										class="md-nav__link"
@@ -86,7 +87,7 @@
 					</li>
 
 					<!-- This navigation is completely for mobile -->
-					{% for section in site.data.toc %}
+					{% for section in site.data.sidebarMethod %}
 					<!-- {{site.data[page.sidebar]}} -->
 					<li class="md-nav__item mobile-nav" style="display: none">
 						<a
@@ -99,7 +100,7 @@
 					{% endfor %}
 
 					<!-- This navigation is completely for non mobile -->
-					{% for section in site.data.toc %}
+					{% for section in site.data.sidebarMethod %}
 					<!-- {{site.data[page.sidebar]}} -->
 					<li class="md-nav__item md-nav__item--nested not-mobile-nav">
 						<a
