--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -70,7 +70,7 @@
 								{% endfor %}
 								-->
 							<ul class="md-nav__list" data-md-scrollfix="">
-								{% for section in site.data.sidebarMethod %}
+								{% for section in site.data[page.sidebar] %}
 								<li class="md-nav__item">
 									<a
 										class="md-nav__link"
@@ -87,7 +87,7 @@
 					</li>
 
 					<!-- This navigation is completely for mobile -->
-					{% for section in site.data.sidebarMethod %}
+					{% for section in site.data[page.sidebar] %}
 					<!-- {{site.data[page.sidebar]}} -->
 					<li class="md-nav__item mobile-nav" style="display: none">
 						<a
@@ -100,7 +100,7 @@
 					{% endfor %}
 
 					<!-- This navigation is completely for non mobile -->
-					{% for section in site.data.sidebarMethod %}
+					{% for section in site.data[page.sidebar] %}
 					<!-- {{site.data[page.sidebar]}} -->
 					<li class="md-nav__item md-nav__item--nested not-mobile-nav">
 						<a
